--- a/trunk/ObjectDetection/ObjectDetection/ObjectDetection.vcproj
+++ b/trunk/ObjectDetection/ObjectDetection/ObjectDetection.vcproj
@@ -21,7 +21,7 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
-			CharacterSet="1"
+			CharacterSet="0"
 			ManagedExtensions="1"
 			>
 			<Tool
@@ -59,7 +59,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="cv210.lib cxcore210.lib highgui210.lib $(NOINHERIT)"
+				AdditionalDependencies="cv210d.lib cxcore210d.lib highgui210d.lib $(NOINHERIT)"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				AssemblyDebug="1"
@@ -187,6 +187,10 @@
 			</File>
 			<File
 				RelativePath=".\cutImage.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\HOG.cpp"
 				>
 			</File>
 			<File
