--- a/trunk/ObjectDetection/ObjectDetection/ObjectDetection.vcproj
+++ b/trunk/ObjectDetection/ObjectDetection/ObjectDetection.vcproj
@@ -42,6 +42,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
+				AdditionalIncludeDirectories="D:\Lectures\Luan_van\tool\boost_1_43_0"
 				PreprocessorDefinitions="WIN32;_DEBUG"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="2"
