--- a/ObjectDetection/ObjectDetection/ObjectDetection.vcproj
+++ b/ObjectDetection/ObjectDetection/ObjectDetection.vcproj
@@ -177,6 +177,16 @@
 			AssemblyName="System.Xml, Version=2.0.0.0, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL"
 			MinFrameworkVersion="131072"
 		/>
+		<AssemblyReference
+			RelativePath="System.Drawing.dll"
+			AssemblyName="System.Drawing, Version=2.0.0.0, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL"
+			MinFrameworkVersion="131072"
+		/>
+		<AssemblyReference
+			RelativePath="System.Windows.Forms.dll"
+			AssemblyName="System.Windows.Forms, Version=2.0.0.0, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL"
+			MinFrameworkVersion="131072"
+		/>
 	</References>
 	<Files>
 		<Filter
@@ -193,6 +203,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\detection.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\HOG.cpp"
 				>
 			</File>
@@ -206,6 +220,10 @@
 			</File>
 			<File
 				RelativePath=".\loadConfigs.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\MainWindow.cpp"
 				>
 			</File>
 			<File
@@ -255,6 +273,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\detection.h"
+				>
+			</File>
+			<File
 				RelativePath=".\glbVars.h"
 				>
 			</File>
@@ -269,6 +291,16 @@
 			<File
 				RelativePath=".\loadConfigs.h"
 				>
+			</File>
+			<File
+				RelativePath=".\MainWindow.h"
+				FileType="3"
+				>
+				<File
+					RelativePath=".\MainWindow.resx"
+					SubType="Designer"
+					>
+				</File>
 			</File>
 			<File
 				RelativePath=".\meanshift.h"
