--- a/ObjectDetection/ObjectDetection/ObjectDetection.vcproj
+++ b/ObjectDetection/ObjectDetection/ObjectDetection.vcproj
@@ -42,7 +42,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="D:\Lectures\Luan_van\tool\boost_1_43_0"
+				AdditionalIncludeDirectories="D:\My Documents\Study\CS\Soft Computing\Pattern Recognization\Boost C++\boost_1_43_0"
 				PreprocessorDefinitions="WIN32;_DEBUG"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="2"
@@ -207,6 +207,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\HardSample.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\HOG.cpp"
 				>
 			</File>
@@ -278,6 +282,10 @@
 			</File>
 			<File
 				RelativePath=".\glbVars.h"
+				>
+			</File>
+			<File
+				RelativePath=".\HardSample.h"
 				>
 			</File>
 			<File
