--- a/ObjectDetection/ObjectDetection/ObjectDetection.vcproj
+++ b/ObjectDetection/ObjectDetection/ObjectDetection.vcproj
@@ -315,6 +315,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\myPCA.h"
+				>
+			</File>
+			<File
 				RelativePath=".\resource.h"
 				>
 			</File>
