--- a/trunk/ObjectDetection/ObjectDetection/ObjectDetection.vcproj
+++ b/trunk/ObjectDetection/ObjectDetection/ObjectDetection.vcproj
@@ -235,6 +235,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\myPCA.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\ObjectDetection.cpp"
 				>
 			</File>
